--- a/package.json
+++ b/package.json
@@ -13,22 +13,21 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.20.0",
-    "babel-loader": "^6.2.9",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
     "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-relay-plugin": "^0.9.3",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-relay-plugin": "^0.11.0",
     "sync-request": "^3.0.1",
     "webpack": "1.13.2"
   },
   "dependencies": {
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-hotkeys": "^0.9.0",
-    "react-relay": "^0.9.3",
-    "react-remarkable": "^1.1.1",
-    "react-scroll-box": "^0.3.3-beta"
+    "react-relay": "^0.10.0",
+    "react-remarkable": "^1.1.1"
   }
 }
