--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile "org.grails:grails-plugin-gsp"
     compile "org.grails.plugins:views-json"
     compile "org.grails.plugins:views-json-templates"
+    compile "org.grails.plugins:scaffolding"
     console "org.grails:grails-console"
     profile "org.grails.profiles:webpack"
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.11.6"
