--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     repositories {
+	    jcenter()
         mavenLocal()
         maven { url "https://repo.grails.org/grails/core" }
         maven { url "https://plugins.gradle.org/m2/" }
@@ -69,10 +70,11 @@ dependencies {
 	runtime "com.h2database:h2"
 
 	compile 'org.grails.plugins:spring-security-core:3.1.1'
-	compile 'io.cirill:relay-gorm-connector:1.2.7'
 	runtime 'org.grails.plugins:grails-console:2.0.8'
     compile group: 'com.googlecode.java-diff-utils', name: 'diffutils', version: '1.3.0'
     assets "com.bertramlabs.plugins:sass-asset-pipeline:2.12.4"
+
+    compile 'com.github.grooviter:schema:0.1.8-alpha'
 }
 
 bootRun {
