--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "babel-relay-plugin": "^0.11.0",
     "sync-request": "^4.0.3",
     "webpack": "^2.6.1"
