--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ apply plugin:"asset-pipeline"
 repositories {
     mavenLocal()
     maven { url "https://repo.grails.org/grails/core" }
+	jcenter()
 }
 
 dependencyManagement {
@@ -74,7 +75,7 @@ dependencies {
     compile group: 'com.googlecode.java-diff-utils', name: 'diffutils', version: '1.3.0'
     assets "com.bertramlabs.plugins:sass-asset-pipeline:2.12.4"
 
-    compile 'com.github.grooviter:schema:0.1.8-alpha'
+    compile 'com.github.grooviter:gql:0.1.8-alpha'
 }
 
 bootRun {
